public static class EnemyConstant
{
    public static string Target = "Target";
    
    //Animation Parameter
    public static string ZombieRandomStatus = "Random Status";
    public static string ZombieRandomAttack = "Random Attack";
    public static string ZombieRandomDamaged = "Random Hit";
    public static string ZombieDefaultAttack = "Default Attack";
    
    public static string Speed = "Speed";
    public static string GetHit = "Get Hit";

    
    public static int ZombieStatusCount = 2;
    public static int ZombieDamagedCount = 2;
    public static int ZombieAttackCount = 3;
    
    //Behavior Tree
    public static string AiCurTarget = "Current Target";
    
    //Tag 
    public static string PlayerTag = "Player";
    
    //Audio Clip
    public static string ZAttack01 = "Zombie Attack_01";
}
